metadata/objects/Sample_Parent__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox_112__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox_112</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_113__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox_113</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_133__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox_133</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_118__c</fullName>
        <label>Currency_118</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_119__c</fullName>
        <label>Currency_119</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_125__c</fullName>
        <label>Currency_125</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateTime_117__c</fullName>
        <label>DateTime_117</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_129__c</fullName>
        <label>DateTime_129</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_136__c</fullName>
        <label>DateTime_136</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_102__c</fullName>
        <label>Date_102</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_110__c</fullName>
        <label>Date_110</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_111__c</fullName>
        <label>Date_111</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_108__c</fullName>
        <label>Email_108</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_116__c</fullName>
        <label>Email_116</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_132__c</fullName>
        <label>Email_132</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <formula>If(AND(&apos;test&apos;=&apos;test&apos;,&apos;test&apos;=&apos;test&apos;,&apos;test&apos;=&apos;test&apos;), &apos;test&apos;,&apos;test&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LongText_14__c</fullName>
        <label>LongText_14</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongText_21__c</fullName>
        <label>LongText_21</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongText_30__c</fullName>
        <label>LongText_30</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MultiSelect_103__c</fullName>
        <label>MultiSelect_103</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiSelect_120__c</fullName>
        <label>MultiSelect_120</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiSelect_124__c</fullName>
        <label>MultiSelect_124</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_104__c</fullName>
        <label>Number_104</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_106__c</fullName>
        <label>Number_106</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_122__c</fullName>
        <label>Number_122</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_138__c</fullName>
        <label>Percent_138</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_142__c</fullName>
        <label>Percent_142</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_146__c</fullName>
        <label>Percent_146</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_0__c</fullName>
        <label>Phone_0</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_10__c</fullName>
        <label>Phone_10</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_134__c</fullName>
        <label>Phone_134</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist_101__c</fullName>
        <label>Picklist_101</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_105__c</fullName>
        <label>Picklist_105</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_109__c</fullName>
        <label>Picklist_109</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RichText_11__c</fullName>
        <label>RichText_11</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RichText_19__c</fullName>
        <label>RichText_19</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RichText_31__c</fullName>
        <label>RichText_31</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RollupSum__c</fullName>
        <label>RollupSum</label>
        <summarizedField>Sample_Child__c.Number__c</summarizedField>
        <summaryForeignKey>Sample_Child__c.Sample_Parent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TextArea_107__c</fullName>
        <label>TextArea_107</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextArea_114__c</fullName>
        <label>TextArea_114</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextArea_115__c</fullName>
        <label>TextArea_115</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_100__c</fullName>
        <label>Text_100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_121__c</fullName>
        <label>Text_121</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_155__c</fullName>
        <label>Text_155</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sample Parent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Checkbox_112__c</columns>
        <columns>Text_422__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Sample Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>